RESOLVED FIXED153234
[B3][Win64] Compile and warning fixes.
https://bugs.webkit.org/show_bug.cgi?id=153234
Summary [B3][Win64] Compile and warning fixes.
peavo
Reported 2016-01-19 07:01:27 PST
The size of 'long' is 4 bytes on Win64. We can use 'long long' instead, when we want the size to be 8 bytes.
Attachments
Patch (2.33 KB, patch)
2016-01-19 07:05 PST, peavo
no flags
peavo
Comment 1 2016-01-19 07:05:48 PST
peavo
Comment 2 2016-01-19 12:51:29 PST
Thanks for the review :)
WebKit Commit Bot
Comment 3 2016-01-19 13:49:24 PST
Comment on attachment 269267 [details] Patch Clearing flags on attachment: 269267 Committed r195314: <http://trac.webkit.org/changeset/195314>
WebKit Commit Bot
Comment 4 2016-01-19 13:49:28 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.