[B3][Win64] Compile and warning fixes. https://bugs.webkit.org/show_bug.cgi?id=153234

Reviewed by Alex Christensen.

The size of 'long' is 4 bytes on Win64. We can use 'long long' instead,
when we want the size to be 8 bytes.

* b3/B3LowerMacrosAfterOptimizations.cpp:
* b3/B3ReduceStrength.cpp:


Canonical link: https://commits.webkit.org/171324@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195314 268f45cc-cd09-0410-ab3c-d52691b4dbfc