Source/JavaScriptCore/b3/B3LowerMacrosAfterOptimizations.cpp
@@ -78,7 +78,7 @@ private:
 
                 Value* mask = nullptr;
                 if (m_value->type() == Double)
-                    mask = m_insertionSet.insert<ConstDoubleValue>(m_index, m_origin, bitwise_cast<double>(~(1l << 63)));
+                    mask = m_insertionSet.insert<ConstDoubleValue>(m_index, m_origin, bitwise_cast<double>(~(1ll << 63)));
                 else if (m_value->type() == Float)
                     mask = m_insertionSet.insert<ConstFloatValue>(m_index, m_origin, bitwise_cast<float>(~(1 << 31)));
                 else
